# dawnpy-ble

./: README.md  pyproject.toml  tox.ini
.github/workflows/: master.yml
src/dawnpy_ble/: __init__.py  __main__.py  ble.py  client.py  profile.py  scanner.py
src/dawnpy_ble/commands/: __init__.py  cmd_ble.py  cmd_ots.py
src/dawnpy_ble/services/: __init__.py  bas.py  common.py  device_information.py  dump.py  gap.py  ots.py  standard.py  tps.py
tests/: test_ble_protocol.py  test_cmd_ble.py  test_profile.py
tests/fixtures/: nimble_aios_wrapped_binding.yaml  nimble_env_sensor_demo.yaml  nimble_gpio_analog_demo.yaml
