[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dawnpy-ble"
version = "0.1.0"
description = "BLE transport package for Dawn built on top of dawnpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bleak>=0.22",
  "click>=8.1",
  "dawnpy",
]

[project.urls]
Repository = "https://github.com/railab/dawnpy-ble"
Documentation = "https://railab.github.io/dawn/tools/dawnpy-ble.html"
"Dawn Project" = "https://github.com/railab/dawn"

[project.scripts]
dawnpy-ble = "dawnpy_ble.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dawnpy_ble*"]

[tool.setuptools.package-data]
dawnpy_ble = ["py.typed"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
